--- a/.github/workflows/unittest-action.yml
+++ b/.github/workflows/unittest-action.yml
@@ -30,6 +30,7 @@ jobs:
         run:
           #python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest
       # Step 4: Run tests
       - name: Run tests
         run: pytest
