--- a/.github/workflows/unittest-action.yml
+++ b/.github/workflows/unittest-action.yml
@@ -23,14 +23,14 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.12'
+          python-version: '3.8'
 
       # Step 3: Install dependencies
       - name: Install dependencies
         run:
-          #python -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest
+          #pip install pytest
       # Step 4: Run tests
       - name: Run tests
         run: pytest
