--- a/.github/workflows/unittest-action.yml
+++ b/.github/workflows/unittest-action.yml
@@ -28,9 +28,9 @@ jobs:
       # Step 3: Install dependencies
       - name: Install dependencies
         run:
-          python -m pip install --upgrade pip
+          #python -m pip install --upgrade pip
           pip install -r requirements.txt
-          #pip install pytest
+          pip install pytest
       # Step 4: Run tests
       - name: Run tests
         run: pytest
