--- a/.github/workflows/unittest-action.yml
+++ b/.github/workflows/unittest-action.yml
@@ -27,10 +27,14 @@ jobs:
 
       # Step 3: Install dependencies
       - name: Install dependencies
-        run:
+        #run:
           #python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest
+          #pip install -r requirements.txt
+          #pip install pytest
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt && pip install pytest
       # Step 4: Run tests
       - name: Run tests
         run: pytest
