--- a/.github/workflows/unittest-action.yml
+++ b/.github/workflows/unittest-action.yml
@@ -26,7 +26,7 @@ jobs:
           python-version: '3.12'
 
       # Step 3: Install dependencies
-      - name: Install dependencies
+      #- name: Install dependencies
         #run:
           #python -m pip install --upgrade pip
           #pip install -r requirements.txt
