--- a/.github/workflows/unittest-action.yml
+++ b/.github/workflows/unittest-action.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt --verbose
+          pip install -r requirements.txt --verbose && pip install pytest
       # Step 4: Run tests
       - name: Run tests
         run: pytest
